update yaml and setup chunk

--- a/1-Standardize Your Project Files.qmd
+++ b/1-Standardize Your Project Files.qmd
@@ -14,6 +14,9 @@ format:
   html:
     resources:
       - reference-backlinks.js
+    include-after-body:    
+      - text: |
+          # <script type="text/javascript" src="reference-backlinks.js"></script>
     code-copy: true
     code-link: true
     include-in-header: header.html
@@ -21,7 +24,6 @@ format:
       - swart.css
       - tachyons.min.css
       - r-colors.css
-    mainfont: "Cabin"
     fontsize: 18pt
     lightbox: true
     page-layout: full
@@ -35,38 +37,37 @@ format:
     link-citations: true
     linestretch: 1.0
     
-  # typst:
-  #   fig-width: 12
-  #   fig-height: 10
-  #   fig-dpi: 300
-  #   margin:
-  #     x: 1in
-  #     y: 1in
-  #   toc: true
-  #   fontsize: 14pt
-  #   mainfont: "Cabin"
+  typst:
+    fig-width: 12
+    fig-height: 10
+    fig-dpi: 300
+    margin:
+      x: 1in
+      y: 1in
+    toc: true
+    fontsize: 14pt
+    mainfont: "Cabin"
     
-  # revealjs:
-  #   smaller: true
-  #   scrollable: true
-  #   chalkboard: true
-  #   # multiplex: true
-  #   theme: default
-  #   reference-location: margin
-  #   logo: img/red-cross-640-435.png
-  #   footer: "Footer text"
-  #   code-block-height: 650px
+  revealjs:
+    slide-number: true
+    transition: fade
+    code-overflow: wrap
+    center: true
+    smaller: true
+    scrollable: true
+    chalkboard: true
+    multiplex: false
+    theme: solarized
+    reference-location: margin
+    logo: img/red-cross-640-435.png
+    footer: "Footer text"
+    code-block-height: 650px
+
 
 
   # docx:
   #   highlight-style: github
   #   fig_caption: true
-
-
-# include this under 'resources' above to create return arrows in citations
-    # include-after-body:    
-      # - text: |
-          # <script type="text/javascript" src="reference-backlinks.js"></script>
 
 
 
@@ -191,6 +192,9 @@ format:
   html:
     resources:
       - reference-backlinks.js
+    include-after-body:    
+      - text: |
+          # <script type="text/javascript" src="reference-backlinks.js"></script>
     code-copy: true
     code-link: true
     include-in-header: header.html
@@ -198,7 +202,6 @@ format:
       - swart.css
       - tachyons.min.css
       - r-colors.css
-    mainfont: "Cabin"
     fontsize: 18pt
     lightbox: true
     page-layout: full
@@ -212,38 +215,37 @@ format:
     link-citations: true
     linestretch: 1.0
     
-  # typst:
-  #   fig-width: 12
-  #   fig-height: 10
-  #   fig-dpi: 300
-  #   margin:
-  #     x: 1in
-  #     y: 1in
-  #   toc: true
-  #   fontsize: 14pt
-  #   mainfont: "Cabin"
+  typst:
+    fig-width: 12
+    fig-height: 10
+    fig-dpi: 300
+    margin:
+      x: 1in
+      y: 1in
+    toc: true
+    fontsize: 14pt
+    mainfont: "Cabin"
     
-  # revealjs:
-  #   smaller: true
-  #   scrollable: true
-  #   chalkboard: true
-  #   # multiplex: true
-  #   theme: default
-  #   reference-location: margin
-  #   logo: img/red-cross-640-435.png
-  #   footer: "Footer text"
-  #   code-block-height: 650px
+  revealjs:
+    slide-number: true
+    transition: fade
+    code-overflow: wrap
+    center: true
+    smaller: true
+    scrollable: true
+    chalkboard: true
+    multiplex: false
+    theme: solarized
+    reference-location: margin
+    logo: img/red-cross-640-435.png
+    footer: "Footer text"
+    code-block-height: 650px
+
 
 
   # docx:
   #   highlight-style: github
   #   fig_caption: true
-
-
-# include this under 'resources' above to create return arrows in citations
-    # include-after-body:    
-      # - text: |
-          # <script type="text/javascript" src="reference-backlinks.js"></script>
 
 
 
@@ -272,6 +274,7 @@ knitr:
     warning: false
     message: false
     cache: false
+
 
 ```
 
@@ -353,6 +356,7 @@ theme_set(theme_minimal(base_size = 20) +
 
 # Set seed for reproducibility
 set.seed(123)
+
 
 ```
 
