--- a/1-Standardize Your Project Files.qmd
+++ b/1-Standardize Your Project Files.qmd
@@ -17,8 +17,15 @@ format:
     include-after-body:    
       - text: |
           # <script type="text/javascript" src="reference-backlinks.js"></script>
+    default: true         
     code-copy: true
-    code-link: true
+    code-link: true        # This adds individual buttons
+    code-fold: true        # Hide code by default, show on click
+    code-summary: "Show the code"
+    code-overflow: wrap
+    code-block-bg: "#FAEBD7"
+    code-block-border-left: "#31BAE9"
+    embed-resources: true
     include-in-header: header.html
     css:
       - swart.css
@@ -30,12 +37,15 @@ format:
     fig-width: 12
     fig-height: 10
     fig-dpi: 300
+    html-math-method: katex
     df-print: paged
-    code-overflow: wrap
     toc: true
+    toc-float: true
     citeproc: true
     link-citations: true
     linestretch: 1.0
+    
+    
     
   typst:
     fig-width: 12
@@ -80,7 +90,7 @@ quarto:
 
 # for .qmd filesd
 execute:
-  echo: false
+  echo: true
   message: false
   warning: false
   eval: true
@@ -91,7 +101,7 @@ execute:
 # for .rmd files
 knitr:
   opts_chunk:
-    echo: false
+    echo: true
     error: false
     warning: false
     message: false
@@ -130,14 +140,11 @@ library(ggthemes)
 library(gt)
 library(gtExtras)
 library(tidyverse)
-library(DT)
 library(plotly)
 library(ggplot2)
-library(kableExtra)
 library(tibble)
 library(patchwork)
 library(ppcor)
-library(ggdag)
 library(ggplot2)
 library(corrplot)
 library(ggcorrplot)
@@ -149,7 +156,21 @@ library(pwr)
 library(qgraph)
 library(scales)
 library(here)
+library(ggdag)      # For plotting DAGs
+library(dagitty)    # For working with DAG logic
+library(DiagrammeR) # For complete control of the layout
+library(knitr)      # For controlling rendering
+library(kableExtra) # For tables summarizing results
+library(DT)         # For rendering content that kableExtra cannot (symbols)
+library(lavaan)     # For latent variable analysis
+library(ggpubr)
+library(rethinking)
+library(broom)
 
+
+# Force dplyr's select to take precedence
+select <- dplyr::select
+filter <- dplyr::filter
 
 # Set global theme for consistent plots
 theme_set(theme_minimal(base_size = 20) + 
@@ -179,7 +200,7 @@ set.seed(123)
 ```markdown
 
 title: "Standardize Your Project Files"
-subtitle: "Add these files to each project folder"
+subtitle: ""
 description: ""
 author: 
   - name: "Dan Swart, CPA (ret)"
@@ -196,8 +217,15 @@ format:
     include-after-body:    
       - text: |
           # <script type="text/javascript" src="reference-backlinks.js"></script>
+    default: true         
     code-copy: true
-    code-link: true
+    code-link: true        # This adds individual buttons
+    code-fold: true        # Hide code by default, show on click
+    code-summary: "Show the code"
+    code-overflow: wrap
+    code-block-bg: "#FAEBD7"
+    code-block-border-left: "#31BAE9"
+    embed-resources: true
     include-in-header: header.html
     css:
       - swart.css
@@ -209,12 +237,15 @@ format:
     fig-width: 12
     fig-height: 10
     fig-dpi: 300
+    html-math-method: katex
     df-print: paged
-    code-overflow: wrap
     toc: true
+    toc-float: true
     citeproc: true
     link-citations: true
     linestretch: 1.0
+    
+    
     
   typst:
     fig-width: 12
@@ -259,7 +290,7 @@ quarto:
 
 # for .qmd filesd
 execute:
-  echo: false
+  echo: true
   message: false
   warning: false
   eval: true
@@ -270,12 +301,11 @@ execute:
 # for .rmd files
 knitr:
   opts_chunk:
-    echo: false
+    echo: true
     error: false
     warning: false
     message: false
     cache: false
-
 
 ```
 
@@ -288,6 +318,7 @@ knitr:
 
 
 ```markdown
+
 #| label: setup
 #| include: false
 
@@ -317,14 +348,11 @@ library(ggthemes)
 library(gt)
 library(gtExtras)
 library(tidyverse)
-library(DT)
 library(plotly)
 library(ggplot2)
-library(kableExtra)
 library(tibble)
 library(patchwork)
 library(ppcor)
-library(ggdag)
 library(ggplot2)
 library(corrplot)
 library(ggcorrplot)
@@ -336,7 +364,21 @@ library(pwr)
 library(qgraph)
 library(scales)
 library(here)
+library(ggdag)      # For plotting DAGs
+library(dagitty)    # For working with DAG logic
+library(DiagrammeR) # For complete control of the layout
+library(knitr)      # For controlling rendering
+library(kableExtra) # For tables summarizing results
+library(DT)         # For rendering content that kableExtra cannot (symbols)
+library(lavaan)     # For latent variable analysis
+library(ggpubr)
+library(rethinking)
+library(broom)
 
+
+# Force dplyr's select to take precedence
+select <- dplyr::select
+filter <- dplyr::filter
 
 # Set global theme for consistent plots
 theme_set(theme_minimal(base_size = 20) + 
@@ -358,7 +400,7 @@ theme_set(theme_minimal(base_size = 20) +
 # Set seed for reproducibility
 set.seed(123)
 
-
+```
 ```
 
 ----
