--- a/1-Standardize Your Project Files.qmd
+++ b/1-Standardize Your Project Files.qmd
@@ -417,6 +417,7 @@ set.seed(123)
 
 ```markdown
 
+
 # Bookdown files-if book rendered in cloud uncomment these
 /*.pdf
 _site
@@ -516,11 +517,17 @@ Thumbs.db
 # Quarto
 /.quarto/
 _freeze/
-  
+
+
 
 # Rendered output (be selective)
+
 *.html
-!vignettes/*.html  # Exception - keep vignette HTML
+!header.html
+!vignettes/*.html
+!giscus.html
+
+
 
 ```
 
